# PACE

./: .env.template  .gitignore  .gitmodules  README.md  patch_math_eval.py  pyproject.toml  requirements.txt  run_pace_experiment.py  setup.sh
PACE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
agents/: __init__.py  dual_agent.py  multi_agentflow.py  single_react.py
benchmarks/: __init__.py  frames.py  tau2.py
configs/: multi_agent.yaml  pace_thresholds.yaml  single_agent.yaml
data/: tasks_mixed.json
experiments/: __init__.py  ablation.py  analyze_results.py  build_signal_dataset.py  build_training_dataset.py  compare_entropy_signals.py  context_eviction.py  generate_baselines.py  report.py  run_ablation.py  run_frames.py  run_qwen27b_baseline.py  run_tau2.py  sweep_thresholds.py
pace/: __init__.py  embeddings.py  extract.py  lic.py  models.py  policy.py  providers.py  signals.py  trajectory.py
pace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/frames/: single_fixed-10_gpt-4o_1773946445.json  single_fixed-5_gpt-4o_1773946302.json
tests/: conftest.py  test_ablation.py  test_agent_agreement.py  test_pace.py  test_policy.py  test_signal_mask.py  test_signals.py  test_text_signals.py
tools/: __init__.py
